feature: adding SMTP Service and JWT Service env variable

--- a/ReimbursementAPI/appsettings.json
+++ b/ReimbursementAPI/appsettings.json
@@ -7,6 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HM2DN7T;database=db_dts_reimbursement;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=;database=db_dts_reimbursement;User Id=;Password=;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "SmtpService": {
+    "Server": "localhost",
+    "Port": 25,
+    "FromEmailAddress": "FinalProjectDTS@no-reply.com"
+  },
+  "JWTService": {
+    "SecretKey": "",
+    "Issuer": "UrlServer",
+    "Audience": "UrlClient"
   }
 }
