--- a/ReimbursementWebApp/ReimbursementWebApp/ReimbursementWebApp.csproj
+++ b/ReimbursementWebApp/ReimbursementWebApp/ReimbursementWebApp.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ReimbursementAPI\ReimbursementAPI.csproj" />
+  </ItemGroup>
+
 </Project>
