feature: implementing Login Authentication

--- a/ReimbursementWebApp/ReimbursementWebApp/appsettings.json
+++ b/ReimbursementWebApp/ReimbursementWebApp/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWTService": {
+    "SecretKey": "",
+    "Issuer": "UrlServer",
+    "Audience": "UrlClient"
+  },
   "AllowedHosts": "*"
 }
